<resources>
    <string name="app_name">Pines</string>
    <string name="hintNombre">Aqui ingresar tu nombre</string>
    <string name="editTextNombre">Ingresar Nombre</string>
    <string name="hintApellido">Aqui ingresar tu apellido</string>
    <string name="editTextApellido">Ingresar Apellido</string>
    <string name="hintDocumento">Aqui ingresar tu documento</string>
    <string name="editTextDocumento">Ingresar Documento</string>
    <string name="hintCorreo">Aqui ingresar tu correo</string>
    <string name="editTextCorreo">Ingresar Correo</string>
    <string name="hintUsuario">Aqui ingresar tu usuario</string>
    <string name="editTextUsuario">Ingresar Usuario</string>
    <string name="hintContrasena">Aqui ingresar tu Contraseña</string>
    <string name="editTextContrasena">Ingresar Contraseña</string>
    <string name="hintContrasena1">Aqui vuelve a ingresar tu Contraseña</string>
    <string name="editTextContrasena1">Repetir Contraseña</string>
    <string name="Registrarse">Registrarse</string>
    <string name="botonRegistrar">Registrarse</string>
    <string name="botonRegistra">Registrar</string>
    <string name="botonLoguear">Loguearse</string>
    <string name="editTextLoginUsuario">Ingresar Nombre de usuario</string>
    <string name="editTextLoginContrasena">Ingresar Contraseña</string>
</resources>